--- a/CUMT_iTraker/cumt_itraker_calibrate .ipynb
+++ b/CUMT_iTraker/cumt_itraker_calibrate .ipynb
@@ -1,27 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "'''\n",
-    "2017年10月12日\n",
-    "    完成：\n",
-    "        对不同环境下的图片进行标定，用这些标定图片微调网络，能得到比较好的表现\n",
-    "        opencv读取视频得到的图片是BGR模式的，CUMT模型时RGB输入，需要调整\n",
-    "''"
+    "# 2017年11月13日17:20:39\n",
+    "# 训练CUMT论文提出的结构"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -33,6 +23,7 @@
     "from scipy.misc import imresize\n",
     "import UI\n",
     "import cv2\n",
+    "import pickle\n",
     "sess=tf.InteractiveSession()\n",
     "cumt_data=np.load(r'D:\\Proj_DL\\Code\\Proj_EyeTraker\\cumt_data.pkl')\n",
     "\n",
@@ -57,8 +48,9 @@
     "    ACCURACY=tf.reduce_mean(tf.cast(acc_count,tf.float32))\n",
     "    tf.summary.scalar('acc',ACCURACY)\n",
     "\n",
-    "writer_tr=tf.summary.FileWriter('./mylog/test')\n",
-    "writer_te=tf.summary.FileWriter('./mylog/val')\n",
+    "writer_tr=tf.summary.FileWriter('./mylog/cumt/train')\n",
+    "writer_te=tf.summary.FileWriter('./mylog/cumt/test')\n",
+    "writer_val=tf.summary.FileWriter('./mylog/cumt/val')\n",
     "merge=tf.summary.merge_all()\n",
     "ex_ops=tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
     "\n"
@@ -80,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#从保存的检查点钟复原变量，加载原数据训练好的模型\n",
@@ -93,74 +83,93 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#模拟校正的图片,训练图片为 RGB\n",
-    "d=np.load('./test_video/101603/101603_z.pkl')\n",
+    "cumt_picmean=[103.939, 116.779, 123.68]\n",
+    "d=np.load('valimg1k_1109.pkl')\n",
     "val={}\n",
-    "mean_pic=np.mean(d['images'],0)\n",
-    "#mean_pic=[103.939, 116.779, 123.68]\n",
-    "val['images']=d['images'].astype('float32')-mean_pic\n",
-    "val['labels']=d['labels']\n",
-    "del d"
+    "val_data=d['data'].astype('float32')-cumt_picmean\n",
+    "val_label=d['label']\n",
+    "del d\n",
+    "print(val_data.shape,val_label.shape)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "val['images'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#方法 1：随机抽取照片标定\n",
-    "\n",
-    "tr_num=(val['images'].shape[0])*0.3#校正图片数目\n",
-    "tr_num=int(tr_num)\n",
-    "#修改，只用一部分视频数据来训练，看效果\n",
-    "all_picnum=val['images'].shape[0]\n",
-    "index=a=np.asarray(range(all_picnum))\n",
+    "data=cumt_data['data']\n",
+    "label=cumt_data['labels']\n",
+    "index=np.arange(data.shape[0])\n",
     "np.random.shuffle(index)\n",
-    "tr_mask=index[:tr_num]\n",
-    "te_mask=index[tr_num:]\n",
-    "tr_img,tr_lab=val['images'][tr_mask],val['labels'][tr_mask]\n",
-    "te_img,te_lab=val['images'][te_mask],val['labels'][te_mask]\n"
+    "tr_index=index[:int(data.shape[0]*0.9)]\n",
+    "te_index=index[int(data.shape[0]*0.9):]\n",
+    "tr_data,tr_label=data[tr_index],label[tr_index]\n",
+    "te_data,te_label=data[te_index],label[te_index]\n",
+    "del data\n",
+    "del label\n",
+    "del cumt_data\n",
+    "print(tr_data.shape,te_data.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "#mask=np.random.choice(te_data.shape[0],10,replace=False)\n",
+    "x_,y_=te_data[:1],te_label[:1]\n",
+    "feed_dict={X:x_,Y:y_,DROPOUT:1.,BN_FLAG:False,LR:lr_}\n",
+    "sess.run(y_score,feed_dict=feed_dict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "tr_num"
+    "# 150 loop/min\n",
+    "lr_=1e-3\n",
+    "batch_size=82\n",
+    "for i in range(1000*5000):\n",
+    "    mask=np.random.choice(tr_data.shape[0],batch_size,replace=False)\n",
+    "    x_,y_=tr_data[mask],tr_label[mask]\n",
+    "    feed_dict={X:x_,Y:y_,DROPOUT:0.5,BN_FLAG:True,LR:lr_}\n",
+    "    sess.run([TRAIN,ex_ops],feed_dict=feed_dict)\n",
+    "    if i%10==0:\n",
+    "        feed_dict={X:x_,Y:y_,DROPOUT:1.,BN_FLAG:False,LR:lr_}\n",
+    "        loss_,acc_,m_=sess.run([LOSS,ACCURACY,merge],feed_dict=feed_dict)\n",
+    "        writer_tr.add_summary(m_,i)\n",
+    "        print('train epoch:{},loss:{},accuracy:{}'.format(i,loss_,acc_))\n",
+    "    if i%20==0:\n",
+    "        mask=np.random.choice(te_data.shape[0],batch_size,replace=False)\n",
+    "        x_,y_=te_data[mask],te_label[mask]\n",
+    "        feed_dict={X:x_,Y:y_,DROPOUT:1.,BN_FLAG:False,LR:lr_}\n",
+    "        loss_,acc_,m_=sess.run([LOSS,ACCURACY,merge],feed_dict=feed_dict)\n",
+    "        writer_te.add_summary(m_,i)\n",
+    "        print('--test epoch:{},loss:{},accuracy:{}'.format(i,loss_,acc_))\n",
+    "    if i%30==0:\n",
+    "        mask=np.random.choice(val_data.shape[0],batch_size,replace=False)\n",
+    "        x_,y_=val_data[mask],val_label[mask]\n",
+    "        feed_dict={X:x_,Y:y_,DROPOUT:1.,BN_FLAG:False,LR:lr_}\n",
+    "        loss_,acc_,m_=sess.run([LOSS,ACCURACY,merge],feed_dict=feed_dict)\n",
+    "        writer_val.add_summary(m_,i)\n",
+    "        print('@@val epoch:{},loss:{},accuracy:{}'.format(i,loss_,acc_))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "saver=tf.train.Saver()"
+    "#### 提取所有可训练参数，并保存"
    ]
   },
   {
@@ -172,28 +181,82 @@
    },
    "outputs": [],
    "source": [
-    "# 150 loop/min\n",
-    "lr_=1e-3\n",
-    "for i in range(150*60*2):\n",
-    "    mask=np.random.choice(range(tr_num),64,replace=False)\n",
-    "    x_,y_=tr_img[mask],tr_lab[mask]\n",
-    "    #x_,y_=tr_img,tr_lab\n",
-    "    feed_dict={X:x_,Y:y_,DROPOUT:0.1,BN_FLAG:True,LR:lr_}\n",
-    "    sess.run([TRAIN,ex_ops],feed_dict=feed_dict)\n",
+    "filename='test_cumt.pkl'\n",
+    "all_var_name=list(tf.trainable_variables())\n",
+    "weight_dict={}\n",
+    "#提取变量值\n",
+    "for name_ in all_var_name:\n",
+    "    #变量名称\n",
+    "    layer_name=str(name_).split(\"'\")[1][:-2]\n",
+    "    #print(layer_name)\n",
+    "    with tf.variable_scope('',reuse=True):\n",
+    "        var=tf.get_variable(layer_name)\n",
+    "        #注意var是tensor，需要转换一下\n",
+    "        weight_dict[layer_name]=sess.run(var)\n",
+    "#保存到pkl文件中\n",
+    "fp=open(filename,'wb')\n",
+    "pickle.dump(obj=weight_dict,file=fp)\n",
+    "fp.close()\n",
+    "print('save weight file done!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 加载保存的网络参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "weight_addr='test_cumt.pkl'\n",
+    "skip_layer=[]\n",
+    "network_dict=np.load(weight_addr)\n",
+    "layer_name=list(network_dict.keys())\n",
+    "for name_ in layer_name:\n",
+    "    if name_ in skip_layer:\n",
+    "        print('skip layer:{}'.format(name_))\n",
+    "        continue\n",
+    "    with tf.variable_scope('',reuse=True):\n",
+    "        var=tf.get_variable(name_)\n",
+    "        sess.run(var.assign(network_dict[name_]))\n",
+    "print('network init done!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 计算所有可训练变量数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "\n",
-    "    if i%10==0:\n",
-    "        x_,y_=te_img,te_lab\n",
-    "        feed_dict={X:x_,Y:y_,DROPOUT:1.,BN_FLAG:False,LR:lr_}\n",
-    "        loss_,acc_,m_=sess.run([LOSS,ACCURACY,merge],feed_dict=feed_dict)\n",
-    "        writer_te.add_summary(m_,i)\n",
-    "        if acc_>0.9999:\n",
-    "            m_name='./model_save/v3model_'+str(int(acc_*100))+'.ckpt'\n",
-    "            saver.save(sess,m_name,global_step=i)\n",
-    "            lr_=max(1e-5,0.5*lr_)\n",
-    "            print('Save model,epoch:{},validate accuracy:{},learning rate:{}'.format(i,acc_,lr_))\n",
-    "           \n",
-    "            break\n",
-    "        print('--epoch:{},loss:{},accuracy:{}'.format(i,loss_,acc_))"
+    "sum_=0\n",
+    "for s in list(tf.trainable_variables()):\n",
+    "    s=str(s)\n",
+    "    shape_=s[s.index('(')+1:s.index(')')].split(',')\n",
+    "    s_=1\n",
+    "    #print(shape_)\n",
+    "    for i in shape_:\n",
+    "        if i =='':continue\n",
+    "        #print(i)\n",
+    "        s_*=int(i)\n",
+    "    sum_+=s_\n",
+    "print('trainable variables nums:{},{}Mb'.format(sum_,sum_*4/(1024*1024)))"
    ]
   },
   {
@@ -442,92 +505,6 @@
     "fp=open('./test_video/101603/101603_z.pkl','wb')\n",
     "pickle.dump(file=fp,obj={'images':img_mat,'labels':lab_mat})\n",
     "fp.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "/********************************************************/\n",
-    "'''\n",
-    "视频分辨率转换\n",
-    "（M,N） -> (640,480)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "from scipy.misc import imresize\n",
-    "import numpy as np\n",
-    "ori_video=r'real-Z.mp4'\n",
-    "tar_video=r'real_h.flv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cap = cv2.VideoCapture(r'real_H.mp4')\n",
-    "fps=cap.get(cv2.CAP_PROP_FPS)\n",
-    "fsize=(\n",
-    "    int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT)),\n",
-    "    int(cap.get(cv2.CAP_PROP_FRAME_WIDTH)),\n",
-    "    \n",
-    "      )\n",
-    "# save video\n",
-    "video_saver=cv2.VideoWriter('real_h.flv',cv2.VideoWriter_fourcc('F','L','V','1'),30,fsize)\n",
-    "while (True):\n",
-    "    ret,frame = cap.read()\n",
-    "    if ret==True:\n",
-    "        frame=(np.transpose(frame,[1,0,2]))[::-1,:,:]\n",
-    "        cv2.imshow('frame',frame)\n",
-    "        video_saver.write(frame)\n",
-    "        if cv2.waitKey(10)& 0xff ==ord('q'):\n",
-    "            print('quite')\n",
-    "            break\n",
-    "    else:\n",
-    "        print('video end')\n",
-    "        break\n",
-    "cap.release()\n",
-    "video_saver.release()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "video_saver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "video_saver.release()"
    ]
   },
   {
