--- a/CUMT_iTraker/squeezenet.ipynb
+++ b/CUMT_iTraker/squeezenet.ipynb
@@ -100,9 +100,9 @@
     "    acc_count=tf.equal(tf.arg_max(y_score,1),tf.arg_max(Y,1))\n",
     "    ACCURACY=tf.reduce_mean(tf.cast(acc_count,tf.float32))\n",
     "    tf.summary.scalar('acc',ACCURACY)\n",
-    "writer_tr=tf.summary.FileWriter('./mylog/squeezenet/train')\n",
-    "writer_te=tf.summary.FileWriter('./mylog/squeezenet/test',sess.graph)\n",
-    "writer_val=tf.summary.FileWriter('./mylog/squeezenet/val')\n",
+    "writer_tr=tf.summary.FileWriter('./mylog/squeezenet_32/train')\n",
+    "writer_te=tf.summary.FileWriter('./mylog/squeezenet_32/test',sess.graph)\n",
+    "writer_val=tf.summary.FileWriter('./mylog/squeezenet_32/val')\n",
     "merge=tf.summary.merge_all()"
    ]
   },
@@ -122,6 +122,7 @@
    "outputs": [],
    "source": [
     "data=resize_img\n",
+    "\n",
     "index=np.arange(data.shape[0])\n",
     "np.random.shuffle(index)\n",
     "# tr_index=index[:100]\n",
@@ -140,6 +141,7 @@
     "val_data=[]\n",
     "for v in range(val_d['data'].shape[0]):\n",
     "    img_=cv2.resize(val_d['data'][v],(128,128))\n",
+    "    \n",
     "    val_data.append(img_)\n",
     "val_data=np.array(val_data)\n",
     "val_label=val_d['label']\n",
@@ -201,11 +203,11 @@
    "outputs": [],
    "source": [
     "#5k each hour\n",
-    "batchsize=83\n",
+    "batchsize=82\n",
     "#warm up,先过拟合一个小数据集，使得网络有一个比较好的初始权值(解决网络难收敛问题)\n",
     "s_time=time.time()\n",
-    "for j in range(5000):\n",
-    "    mask=np.random.choice(100,batchsize,replace=False)\n",
+    "for j in range(1000):\n",
+    "    mask=np.random.choice(100,64,replace=False)\n",
     "    x_,y_=tr_data[mask]-cumt_picmean,tr_label[mask]\n",
     "    feed_dict={X:x_,Y:y_,LR:1e-3}\n",
     "    sess.run(TRAIN,feed_dict=feed_dict)\n",
@@ -346,7 +348,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "from cumt_eye import Cumt_itraker\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "from Cumt_SqueezeNet import squeezenet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml') \n",
@@ -427,15 +448,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#img_dir=r'D:\\Proj_DL\\Code\\Proj_EyeTraker\\Proj_iTraker\\Transfer_iTraker\\img4X4_val'\n",
-    "img_dir=r'D:/Proj_DL/Code/Proj_EyeTraker/Proj_iTraker/CUMT_iTraker/img4x4'\n",
+    "img_dir=r'D:/Proj_DL/Code/Proj_EyeTraker/Proj_iTraker/CUMT_iTraker/img5x5'\n",
     "eye_lis,label_lis=[],[]\n",
     "for addr_ in os.listdir(img_dir):\n",
     "    label_id=int(addr_[:-4].split('_')[-1])\n",
-    "    label_=[0]*16\n",
+    "    label_=[0]*25\n",
     "    label_[label_id]=1\n",
     "    img_=cv2.imread(os.path.join(img_dir,addr_))\n",
     "    eyes_=geteyeimg(img_)\n",
@@ -469,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "index_=np.arange(eye_lis.shape[0])\n",
@@ -481,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ld={}\n",
@@ -498,10 +525,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig=plt.figure(figsize=(10,10))\n",
-    "for i in range(1,17):\n",
+    "fig=plt.figure(figsize=(15,10))\n",
+    "for i in range(1,26):\n",
     "    index_=ld[i-1][0]\n",
-    "    plt.subplot(4,4,i)\n",
+    "    plt.subplot(5,5,i)\n",
     "    plt.imshow(eye_lis[index_])\n",
     "    plt.title(np.argmax(label_lis[index_]))\n",
     "    plt.axis('off')\n",
@@ -516,9 +543,16 @@
    },
    "outputs": [],
    "source": [
-    "fp=open('img4X4_1006.pkl','wb')\n",
+    "fp=open('img5X5_950.pkl','wb')\n",
     "pickle.dump(obj={'data':eye_lis,'label':label_lis},file=fp)\n",
     "fp.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**计算所有可训练参数的数量**"
    ]
   },
   {
@@ -529,7 +563,7 @@
    },
    "outputs": [],
    "source": [
-    "#计算所有可训练参数的数量\n",
+    "\n",
     "def get_trainable_variables_nums()\n",
     "    sum_=0\n",
     "    for s in list(tf.trainable_variables()):\n",
@@ -576,7 +610,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with tf.name_scope('PlaceHolder'):\n",
@@ -605,6 +641,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -616,7 +653,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#加载训练好的权值\n",
@@ -639,7 +678,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d=np.load('img4X4_1006.pkl')\n",
@@ -657,6 +698,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -687,7 +729,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#测试平均测试集ACC\n",
@@ -705,6 +749,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -723,7 +768,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -773,7 +820,7 @@
     "            cv2.line(img_,(0,h_*i),(w,h_*i),line_color,line_w)\n",
     "        return img_\n",
     "\n",
-    "def drawblock(img,line_num,block_id=0,blockcolor=(46,218,255),blockwideth=5,show_rec=True):\n",
+    "def drawblock(img,line_num,block_id=0,blockcolor=(46,218,255),blockwideth=5,show_rec='fill',rec_shape=None):\n",
     "        '''\n",
     "        选定九宫格，在这个格子上填充矩形表示选定这个格子\n",
     "        :param img_: 图片\n",
@@ -789,13 +836,25 @@
     "        cor_w=block_id%line_num\n",
     "        sx,sy=cor_w*w_,cor_h*h_\n",
     "        \n",
-    "        if show_rec:\n",
+    "        if show_rec=='fill':\n",
     "        #将整个矩形填充为其他颜色\n",
     "            img[sy:sy+h_,sx:sx+w_,:]=blockcolor\n",
-    "        else:\n",
+    "        elif show_rec=='rec':\n",
+    "            #显示矩形轮廓\n",
+    "            xe,ye,we,he=rec_shape\n",
+    "            cv2.rectangle(img,(xe,ye),(xe+we,ye+he),(255,0,0),10)\n",
+    "        elif show_rec=='dot':\n",
+    "            #标记一个小点\n",
     "            roi_=img[sy:sy+h_,sx:sx+w_]\n",
     "            cv2.circle(roi_,(roi_.shape[1]//2,roi_.shape[0]//2), 10, (255,128,120), -1)\n",
-    "       \n",
+    "        elif show_rec=='select':\n",
+    "            #hight light 矩形区域\n",
+    "            #img[sy:sy+h_,sx:sx+w_,0]=255#r\n",
+    "            img[sy:sy+h_,sx:sx+w_,1]=255#g\n",
+    "            #img[sy:sy+h_,sx:sx+w_,2]=255#b\n",
+    "        elif show_rec=='pick':\n",
+    "            #返回矩形框内容\n",
+    "            return img[sy:sy+h_,sx:sx+w_],(sx,sy,w_,h_)\n",
     "        return img\n",
     "def geteyeimg(img):\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY) \n",
@@ -856,45 +915,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit\n",
-    "e=model.get_eyeimg(frame,pre_process=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "%%timeit\n",
+    "\n",
     "e=model.get_eyeimg(frame)\n",
     "asw_prob=model.predict(X_tensor=X,eyes_images=e)\n",
     "\n",
-    "#print(np.argmax(asw_prob))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "cap=cv2.VideoCapture(0)\n",
-    "_,frame=cap.read()\n",
-    "cap.release()\n",
-    "e=geteyeimg(frame)\n",
-    "if e is None:\n",
-    "    print('bad pic')\n",
-    "else:\n",
-    "    e=cv2.resize(e,(128,128))[:,:,::-1]\n",
-    "asw_prob=model.predict(X_tensor=X,eyes_images=e.reshape(1,128,128,3))\n",
-    "# test_score=sess.run(y_score,feed_dict={X:e.reshape(1,128,128,3)})\n",
     "print(np.argmax(asw_prob))"
    ]
   },
@@ -908,7 +938,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cap=cv2.VideoCapture(0)\n",
@@ -933,11 +965,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "\n",
     "fps=10\n",
     "fsize_desk=(1920,1080)\n",
     "# save video\n",
@@ -1022,6 +1054,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 选中一个物体"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.init_network('squeeze1k4x4_9688.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "target_img='real_1019.jpg'\n",
+    "\n",
+    "fps=10\n",
+    "fsize_desk=(1920,1080)\n",
+    "# save video\n",
+    "video_d=cv2.VideoWriter('demo_pic.flv',cv2.VideoWriter_fourcc('F','L','V','1'),fps,fsize_desk)\n",
+    "cap=cv2.VideoCapture(0)\n",
+    "s_time=time.time()\n",
+    "tar_img=cv2.imread(target_img)\n",
+    "ori_img=cv2.resize(tar_img,(1920,1080))\n",
+    "#ori_img0=cv2.resize(tar_img,(1920,1080))\n",
+    "#设置window 为全屏\n",
+    "cv2.namedWindow('Capture001',cv2.WINDOW_NORMAL)\n",
+    "cv2.setWindowProperty('Capture001', cv2.WND_PROP_FULLSCREEN, cv2.WINDOW_FULLSCREEN)\n",
+    "\n",
+    "s_time=time.time()\n",
+    "#random_show=np.random.randint(0,16,1)[0]\n",
+    "\n",
+    "#每N帧输出平均预测\n",
+    "sum_score=[]\n",
+    "sum_counter=0\n",
+    "block_id=0\n",
+    "ret_counter=0\n",
+    "right_frame_counter=0\n",
+    "#选中矩形框部分的变量\n",
+    "change_flag=0\n",
+    "block_counter={}\n",
+    "rec_x,rec_y,rec_w,rec_h=0,0,0,0\n",
+    "while True:\n",
+    "    ret,fram=cap.read()\n",
+    "    if ret:\n",
+    "        #显示 内窥镜图像\n",
+    "        tar_img=ori_img.copy()\n",
+    "        tar_img=drawline(tar_img,wandh_num=4)\n",
+    "        cv2.imshow('Capture001',tar_img)\n",
+    "        e=model.get_eyeimg(fram)\n",
+    "        if e is None:\n",
+    "            continue\n",
+    "        y_guess=model.predict(X_tensor=X,eyes_images=e)[0]\n",
+    "\n",
+    "        #平均每 N 帧的预测分数\n",
+    "        sum_counter+=1\n",
+    "        sum_score.append(y_guess)\n",
+    "        if sum_counter==3:\n",
+    "            sum_score=np.asarray(sum_score).reshape((-1,16))\n",
+    "            mean_score=np.mean(sum_score,0)\n",
+    "            block_id=np.argmax(mean_score)-1\n",
+    "            sum_score=[]\n",
+    "            sum_counter=0\n",
+    "            #print(block_id)\n",
+    "            if block_id<0:block_id=0\n",
+    "            elif block_id>15:block_id=15\n",
+    "        \n",
+    "        #假如连续盯着一个地方，放大这部分,只放大两次\n",
+    "        if change_flag <2:\n",
+    "            if block_id not in block_counter:\n",
+    "                block_counter[block_id]=0\n",
+    "            block_counter[block_id]+=1\n",
+    "            if block_counter[block_id]==30:\n",
+    "                roi_rec,rec_shape=drawblock(tar_img,line_num=4,block_id=block_id,show_rec='pick')\n",
+    "                s_x,s_y,s_w,s_h=rec_shape\n",
+    "                rec_x+=s_x//(4**change_flag)\n",
+    "                rec_y+=s_y//(4**change_flag)\n",
+    "                #print(rec_x,rec_y,s_x,s_y)\n",
+    "                rec_w,rec_h=s_w//4,s_h//4\n",
+    "                block_counter={}\n",
+    "                ori_img=cv2.resize(roi_rec,(1920,1080))\n",
+    "                change_flag+=1\n",
+    "        elif change_flag ==2:\n",
+    "            change_flag+=1\n",
+    "            #将选中的区域标记处来\n",
+    "            tar_img=cv2.imread(target_img)\n",
+    "            ori_img=cv2.resize(tar_img,(1920,1080))\n",
+    "            cv2.rectangle(ori_img,(rec_x,rec_y),(rec_x+rec_w,rec_y+rec_h),(0,0,255),3)\n",
+    "            #cv2.circle(ori_img,(ori_img.shape[1]//2,ori_img.shape[0]//2), 10, (255,128,120), -1)\n",
+    "            continue\n",
+    "        \n",
+    "        tar_img=drawblock(tar_img,line_num=4,block_id=block_id,show_rec='select')\n",
+    "        v_img=tar_img.copy()\n",
+    "        fram=cv2.resize(fram,(200,200))\n",
+    "        v_img[:200,-200:]=fram\n",
+    "        cv2.imshow('Capture001',tar_img)\n",
+    "\n",
+    "        video_d.write(v_img)\n",
+    "        if cv2.waitKey(1)&0xff==27:\n",
+    "#             print('accuracy:{}'.format(right_frame_counter/ret_counter))\n",
+    "            print('out')\n",
+    "            break\n",
+    "    if (time.time()-s_time)>30:\n",
+    "        print('time out')\n",
+    "        break\n",
+    "video_d.release()\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1030,6 +1185,25 @@
    "outputs": [],
    "source": [
     "video_d.release()\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cap=cv2.VideoCapture(0)\n",
+    "while True:\n",
+    "    ret,fram=cap.read()\n",
+    "    if ret:\n",
+    "        cv2.imshow('cam',fram)\n",
+    "        if cv2.waitKey(30)&0xff==27:\n",
+    "            break\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
